Rework 9 [Indiv 2 WIP] (10.12) {fix OutputStudData input}